changed Fig.1 to Figure 1

--- a/06_Paper/COG-ED/Manuscript.Rmd
+++ b/06_Paper/COG-ED/Manuscript.Rmd
@@ -466,7 +466,7 @@ The COG-ED paradigm has been applied to tasks with different domains before, sho
 ```{r figure1, echo=FALSE, message=FALSE, warning=FALSE}
 include_graphics(here("99_Thinktank", "Other", "Paradigm_Scheme.png"))
 ```
-*Fig.1* An example for subjective values for an n-back task with three levels, returned by different modifications of the COG-ED paradigm for a participant with the true preference 2-back \> 3-back \> 1-back.
+*Figure 1.* An example for subjective values for an n-back task with three levels, returned by different modifications of the COG-ED paradigm for a participant with the true preference 2-back \> 3-back \> 1-back.
 
 Our hypotheses were derived from the results of Westbrook et al. [-@Westbrook2013].
 Regarding the associations of subjective and objective task load we hypothesize that (1a) the signal detection parameter *d'* declines with increasing n-back level, (1b) reaction time increases with increasing n-back level, and (1c) perceived task load increases with increasing n-back level.
@@ -1950,7 +1950,7 @@ The authors declare no competing interests.
 
 ```
 
-*Figure 1* An example for subjective values for an n-back task with three levels, returned by different modifications of the COG-ED paradigm for a participant with the true preference 2-back > 3-back > 1-back.
+*Figure 1.* An example for subjective values for an n-back task with three levels, returned by different modifications of the COG-ED paradigm for a participant with the true preference 2-back > 3-back > 1-back.
 
 \newpage
 
