added loop for data import

--- a/06_Paper/ER-ED/method.Rmd
+++ b/06_Paper/ER-ED/method.Rmd
@@ -143,6 +143,22 @@ datalist_EMG = lapply(list.files(here("04_RawData", "pilot", "ER-ED/EMG/analysis
 # new empty frame to store files into
 data_EMG = data.frame(ID = character(), segment = double(), Corr = double(), 
                      Lev = double())
+
+# store EMG data in data_EMG frame
+for (i in 1:length(datalist_EMG)) {
+  
+  tmp = data.frame(datalist_EMG[[i]][["participant"]], 
+                   datalist_EMG[[i]][["Segment"]], 
+                   datalist_EMG[[i]][["T0T6000Corr-ASNM"]], 
+                   datalist_EMG[[i]][["T0T6000Lev-ASNM"]])
+  colnames(tmp) = names(data_EMG)
+  
+  data_EMG = rbind(tmp, data_EMG)
+  
+}
+
+#rownames(data_ER) = 1:nrow(data_ER)
+
 ```
 
 # 2. Method
