--- a/06_Paper/ER-ED/report.Rmd
+++ b/06_Paper/ER-ED/report.Rmd
@@ -1,15 +1,15 @@
 ---
 title             : "Estimating individual subjective values of emotion regulation strategies"
 shorttitle        : "Subjective values of emotion regulation strategies"
-author: 
-  - name          : "Josephine Zerna"
-    orcid         : "0000-0003-2892-884X"
+author:
+  - name          : "Christoph Scheffel"
+    orcid         : "0000-0001-5963-9229"
     affiliation   : "1"
     corresponding : yes
     address       : "Zellescher Weg 17, 01069 Dresden, Germany"
-    email         : "josephine.zerna@tu-dresden.de"
+    email         : "christoph_scheffel@tu-dresden.de"
     equal_contrib : yes
-    role:         # Contributorship roles (e.g., CRediT, https://casrai.org/credit/)
+    role          :         # Contributorship roles (e.g., CRediT, https://casrai.org/credit/)
       - Conceptualization
       - Methodology
       - Funding acquisition
@@ -20,11 +20,11 @@ author:
       - Visualization
       - Writing - original draft preparation
       - Writing - review & editing
-  - name          : "Christoph Scheffel"
-    orcid         : "0000-0001-5963-9229"
+  - name          : "Josephine Zerna"
+    orcid         : "0000-0003-2892-884X"
     affiliation   : "1"
     equal_contrib : yes
-    role:
+    role          :
       - Conceptualization
       - Methodology
       - Funding acquisition
@@ -32,7 +32,16 @@ author:
       - Project administration
       - Software
       - Writing - review & editing
-      affiliation:
+  - name          : "Anne Gärtner"
+    orcid         : "0000-0003-4296-963X"
+    affiliation   : "1"
+    role          :
+  - name          : "Alexander Strobel"
+    orcid         :
+    affiliation   : "1"
+    role          :
+      
+affiliation:
   - id            : "1"
     institution   : "Faculty of Psychology, Technische Universität Dresden, 01069 Dresden, Germany"
 authornote:
