--- a/06_Paper/ER-ED/report.Rmd
+++ b/06_Paper/ER-ED/report.Rmd
@@ -36,11 +36,14 @@ author:
     orcid         : "0000-0003-4296-963X"
     affiliation   : "1"
     role          :
+      - Formal analysis
+      - Writing - review & editing
   - name          : "Alexander Strobel"
     orcid         :
     affiliation   : "1"
     role          :
-      
+      - Conceptualization
+      - Writing - review & editing 
 affiliation:
   - id            : "1"
     institution   : "Faculty of Psychology, Technische Universität Dresden, 01069 Dresden, Germany"
